Clean up LVV-T136 notebook

--- a/notebooks/test_LVV-T136.ipynb
+++ b/notebooks/test_LVV-T136.ipynb
@@ -148,11 +148,7 @@
    "outputs": [],
    "source": [
     "# extract the calexp image\n",
-    "calexp = butler.get('calexp', dataId=data_ids[0])\n",
-    "#src = butler.get('src', dataId=dataId)\n",
-    "\n",
-    "#psf = calexp.getPsf()\n",
-    "#wcs = calexp.getWcs()"
+    "calexp = butler.get('calexp', dataId=data_ids[0])"
    ]
   },
   {
