Update from JIRA.

--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -31,7 +31,7 @@
 
 \title{LVV-P99: Data Management Acceptance Test Campaign 1 Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
-\date{ 2022-12-16 }
+\date{ 2023-01-04 }
 \author{ Jeffrey Carlin }
 
 \input{history_and_info.tex}
@@ -874,7 +874,7 @@ verification is the variety of activities required to verify the DM
 system, which can make testing time consuming and difficult. As many
 capabilities as possible should be tested in an automated way during
 (re-)processing campaigns using, for example, the `faro` or
-`analysis\_drp` Science Pipelines packages.
+`analysis\_tools` Science Pipelines packages.
 
 \newpage
 \section{Detailed Test Results}
