Update from JIRA.

--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -31,7 +31,7 @@
 
 \title{LVV-P99: Data Management Acceptance Test Campaign 1 Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
-\date{ 2023-01-04 }
+\date{ 2023-01-09 }
 \author{ Jeffrey Carlin }
 
 \input{history_and_info.tex}
@@ -4725,7 +4725,8 @@ Step 4 & Step Execution Status: \textbf{ Pass } \\ \hline
  Description \\
 {\footnotesize
 Confirm that the DIAForcedSource catalog contains measurements for each
-source.
+source, including DIAObject and visit IDs, the modeled flux and error,
+and measurement quality flags.
 
 }
 \hdashrule[0.5ex]{\textwidth}{1pt}{3mm}
