Update from JIRA.

--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -31,7 +31,7 @@
 
 \title{LVV-P99: Data Management Acceptance Test Campaign 1 Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
-\date{ 2023-01-09 }
+\date{ 2023-01-17 }
 \author{ Jeffrey Carlin }
 
 \input{history_and_info.tex}
@@ -70,7 +70,7 @@ least half of the priority 1a requirements outlined in the Data
 Management System Requirements (DMSR;
 \href{https://lse-61.lsst.io/}{LSE-61} ), ensuring that we are
 progressing toward readiness for the installation and operation of
-ComCam. Additional DMSR requirements will be verified in later
+LSSTCam. Additional DMSR requirements will be verified in later
 Acceptance Test Campaigns.\\[2\baselineskip]\textbf{Applicable
 Documents:}\\
 \citeds{LSE-61}: Data Management System (DMS) Requirements\\
@@ -102,7 +102,7 @@ Section \ref{sect:overview} provides a summary of the test results, including an
 an overall assessment statement and suggestions for possible improvements.
 Section \ref{sect:detailedtestresults} provides detailed results for each step in each test case.
 
-The current status of test plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P99}{LVV-P99} in Jira is \textbf{ Approved }.
+The current status of test plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P99}{LVV-P99} in Jira is \textbf{ Completed }.
 
 \subsection{References}
 \label{sect:references}
@@ -471,13 +471,13 @@ Jeffrey Carlin }
 \begin{longtable}{p{2cm}cp{2.3cm}p{8.6cm}p{2.3cm}}
 \toprule
 \multicolumn{2}{r}{ T. Plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P99}{LVV-P99}:} &
-\multicolumn{2}{p{10.9cm}}{\textbf{ Data Management Acceptance Test Campaign 1 }} & Approved \\\hline
+\multicolumn{2}{p{10.9cm}}{\textbf{ Data Management Acceptance Test Campaign 1 }} & Completed \\\hline
 \multicolumn{2}{r}{ T. Cycle \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testCycle/LVV-C208}{LVV-C208}:} &
 \multicolumn{2}{p{10.9cm}}{\textbf{ Data Management Acceptance Test Campaign 1 }} & Done \\\hline
 \textbf{Test Cases} &  \textbf{Ver.} & \textbf{Status} & \textbf{Comment} & \textbf{Issues} \\\toprule
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T33}{LVV-T33}
 &  1
-& Pass &
+& Initial Pass &
 \begin{minipage}[]{9cm}
 \smallskip
 The python script to execute this test is attached to the Test Report
@@ -916,7 +916,7 @@ present and queryable.
 \textbf{ Preconditions}:\\
 
 
-Execution status: {\bf Pass }
+Execution status: {\bf Initial Pass }
 
 Final comment:\\The python script to execute this test is attached to the Test Report
 github repository in scripts/test\_LVV-T32.py. (This test was executed
@@ -1374,7 +1374,7 @@ images.
 \paragraph{ LVV-T2697 - Verify implementation of Catalog Data Product Access }\mbox{}\\
 
 Version \textbf{1}.
-Status \textbf{Defined}.
+Status \textbf{Approved}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T2697}{\textit{ LVV-T2697 } }
 test case in Jira.
 
@@ -1573,7 +1573,7 @@ See the attached notebook, wherein we repeated the above steps for
 \paragraph{ LVV-T2698 - Verify implementation of Catalog Metadata Access }\mbox{}\\
 
 Version \textbf{1}.
-Status \textbf{Defined}.
+Status \textbf{Approved}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T2698}{\textit{ LVV-T2698 } }
 test case in Jira.
 
@@ -1818,7 +1818,7 @@ to list and access catalog metadata via the Butler.
 \paragraph{ LVV-T136 - Verify implementation of Image Data Product Access }\mbox{}\\
 
 Version \textbf{1}.
-Status \textbf{Defined}.
+Status \textbf{Approved}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T136}{\textit{ LVV-T136 } }
 test case in Jira.
 
@@ -1985,7 +1985,7 @@ See the attached notebook, wherein we repeated the above steps for
 \paragraph{ LVV-T2692 - Verify implementation of Image Metadata Access }\mbox{}\\
 
 Version \textbf{1}.
-Status \textbf{Defined}.
+Status \textbf{Approved}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T2692}{\textit{ LVV-T2692 } }
 test case in Jira.
 
