--- a/history_and_info.tex
+++ b/history_and_info.tex
@@ -1,7 +1,7 @@
 % Most recent last
 \setDocChangeRecord{
 \addtohist{}{2022-07-12}{First draft}{Jeff Carlin}
-\addtohist{}{2023-01-17}{Test campaign LVV-P99 completed and results approved. DM-32340}{Jeff Carlin}
+\addtohist{1.0}{2023-01-17}{Test campaign LVV-P99 completed and results approved. DM-32340}{Jeff Carlin}
 }
 
 \setDocCurator{Jeff Carlin}
