Workaround for GHA failure

--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -43,7 +43,7 @@ This is the test plan and report for
 \textbf{ Data Management Acceptance Test Campaign 1},
 an LSST milestone pertaining to the Data Management Subsystem.\\
 This document is based on content automatically extracted from the Jira test database on \docDate.
-The most recent change to the document repository was on \vcsDate.
+The most recent change to the document repository was on \docDate.
 }
 
 
