--- a/history_and_info.tex
+++ b/history_and_info.tex
@@ -6,4 +6,5 @@
 
 \setDocCurator{Jeff Carlin}
 \setDocUpstreamLocation{\url{https://github.com/lsst-dm/\lsstDocType-\lsstDocNum}}
-\setDocUpstreamVersion{\vcsRevision}
+\setDocUpstreamVersion{34628ca}
+%\setDocUpstreamVersion{\vcsRevision}
