Update from JIRA.

--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -2,8 +2,7 @@
 % using template at /usr/share/miniconda/envs/docsteady-env/lib/python3.7/site-packages/docsteady/templates/tpr.latex.jinja2.
 % using docsteady version 2.3.0
 % Please do not edit -- update information in Jira instead
-\documentclass[DM,STR,toc]{lsstdoc}
-%\documentclass[DM,lsstdraft,STR,toc]{lsstdoc}
+\documentclass[DM,lsstdraft,STR,toc]{lsstdoc}
 \usepackage{geometry}
 \usepackage{longtable,booktabs}
 \usepackage{enumitem}
@@ -32,7 +31,7 @@
 
 \title{LVV-P99: Data Management Acceptance Test Campaign 1 Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
-\date{ 2023-01-17 }
+\date{ 2023-01-19 }
 \author{ Jeffrey Carlin }
 
 \input{history_and_info.tex}
@@ -43,7 +42,7 @@ This is the test plan and report for
 \textbf{ Data Management Acceptance Test Campaign 1},
 an LSST milestone pertaining to the Data Management Subsystem.\\
 This document is based on content automatically extracted from the Jira test database on \docDate.
-The most recent change to the document repository was on \docDate.
+The most recent change to the document repository was on \vcsDate.
 }
 
 
