--- a/DMTR-371.tex
+++ b/DMTR-371.tex
@@ -1,6 +1,6 @@
 % generated from JIRA project LVV
 % using template at /usr/share/miniconda/envs/docsteady-env/lib/python3.7/site-packages/docsteady/templates/tpr.latex.jinja2.
-% using docsteady version 2.3.0
+% using docsteady version 2.3.1
 % Please do not edit -- update information in Jira instead
 \documentclass[DM,lsstdraft,STR,toc]{lsstdoc}
 \usepackage{geometry}
@@ -10,6 +10,7 @@
 \usepackage{attachfile}
 \usepackage{array}
 \usepackage{dashrule}
+\usepackage{pdfpages}
 
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}p{#1}}
 
@@ -31,7 +32,7 @@
 
 \title{LVV-P99: Data Management Acceptance Test Campaign 1 Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
-\date{ 2023-01-19 }
+\date{ 2023-06-23 }
 \author{ Jeffrey Carlin }
 
 \input{history_and_info.tex}
